--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
+    "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
+    "bull": "^4.12.9",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "handlebars": "^4.7.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.14.0",
