--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@prisma/client": "^5.14.0",
     "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
