--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/schedule": "^4.0.2",
+    "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.14.0",
     "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
@@ -38,7 +40,8 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.14.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
